# WhiteNote

./: .gitignore  CLAUDE.md  README.md  docker-compose.yaml
backend/: Dockerfile  README.md  app.py  config.example.env  main.py  pyproject.toml  run_dev.py  run_fetch.py  settings.yaml  supervisord.conf  worker.py
backend/api/: deps.py
backend/api/routes/: chat.py  collections.py  papers.py
backend/api/schemas/: __init__.py  chat.py  collection.py  paper.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  chat.py  papers.py  search.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/models/: __init__.py  chat.py  paper.py  search.py
backend/app/services/: __init__.py  chat_service.py  index_service.py  paper_service.py
backend/pages/: 1_Page_Detail.py  2_Task_Monitor.py
backend/src/config/: config.py
backend/src/crawler/: arxiv_client.py
backend/src/database/: __init__.py  chat_repository.py  json_store.py  paper_repository.py  paper_user_meta_repository.py
backend/src/database/db/: models.py  session.py
backend/src/jobs/: daily_arxiv.py  paper_comic_job.py  paper_summary_job.py
backend/src/model/: chat.py  paper.py
backend/src/queue/: __init__.py  connection.py  tasks.py
backend/src/scheduler/: scheduler_service.py
backend/src/scripts/: clear_cache.py  init_db.py
backend/src/service/: base.py  chat_service.py  image_generation_service.py  index_service.py  llm_service.py  pdf_download_service.py  pdf_parser_service.py
backend/src/storage/: __init__.py  json_store.py
docs/: progress.md  (+1 more)
(+17 files in other folders)
