[project]
name = "lavendersentinel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4.0",
    "litellm>=1.80.0",
    "marker>=2.1.3",
    "marker-pdf>=1.7.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.5.0",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
]
